[gd_scene load_steps=17 format=2]

[ext_resource path="res://Arena/Assets/Krystinnnnn.png" type="Texture" id=1]
[ext_resource path="res://Arena/Assets/Reynar.png" type="Texture" id=2]
[ext_resource path="res://Cubes/Assets/10_poison.jpg" type="Texture" id=3]
[ext_resource path="res://Cubes/Assets/17_blood_drain.jpg" type="Texture" id=4]
[ext_resource path="res://Cubes/Assets/18_pain.jpg" type="Texture" id=5]
[ext_resource path="res://SpellBook/SpellBook.gd" type="Script" id=6]
[ext_resource path="res://SpellBook/SpellSealUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://Resources/ghost_rich_text_effect.gd" type="Script" id=8]
[ext_resource path="res://Resources/pulse_rich_text_effect.gd" type="Script" id=9]
[ext_resource path="res://Resources/matrix_rich_text_effect.gd" type="Script" id=10]
[ext_resource path="res://SpellBook/Page.gd" type="Script" id=11]

[sub_resource type="RichTextEffect" id=1]
resource_name = "RichTextGhost"
script = ExtResource( 8 )

[sub_resource type="RichTextEffect" id=2]
resource_name = "RichTextMatrix"
script = ExtResource( 10 )

[sub_resource type="RichTextEffect" id=3]
resource_name = "RichTextPulse"
script = ExtResource( 9 )

[sub_resource type="RichTextEffect" id=4]
resource_name = "RichTextMatrix"
script = ExtResource( 10 )

[sub_resource type="RichTextEffect" id=5]
resource_name = "RichTextMatrix"
script = ExtResource( 10 )

[node name="SpellBook" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
mouse_filter = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 90.0, 229.0 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 512.0, 531.0 ]
}

[node name="Pages" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -383.0
margin_top = -234.0
margin_right = 382.0
margin_bottom = 242.0
mouse_filter = 2
color = Color( 0.941176, 0.941176, 0.941176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Index" type="Control" parent="Pages"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Pages/Index"]
margin_left = 406.0
margin_top = 8.0
margin_right = 743.0
margin_bottom = 85.0
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "la sombra de los malditos
"
text = "la sombra de los malditos
"
custom_effects = [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ]

[node name="LinkButton" type="LinkButton" parent="Pages/Index"]
margin_left = 409.0
margin_top = 127.0
margin_right = 533.0
margin_bottom = 141.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "The new cofrady"

[node name="LinkButton2" type="LinkButton" parent="Pages/Index"]
margin_left = 425.0
margin_top = 148.0
margin_right = 549.0
margin_bottom = 162.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "The dark Scorpion"

[node name="LinkButton3" type="LinkButton" parent="Pages/Index"]
margin_left = 425.0
margin_top = 167.0
margin_right = 549.0
margin_bottom = 181.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Krystine"

[node name="KrystinePage" type="Control" parent="Pages"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -758.0
margin_top = -229.0
margin_right = -9.0
margin_bottom = 228.0
mouse_filter = 2
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
page = 1

[node name="Title" type="RichTextLabel" parent="Pages/KrystinePage"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -350.5
margin_top = 14.0
margin_right = -23.5
margin_bottom = 34.0
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center][b]The dark serpent[/b][/center]"
text = "The dark serpent"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Pages/KrystinePage"]
margin_left = 23.0
margin_top = 293.0
margin_right = 348.0
margin_bottom = 417.0
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Krystine Vanhail, mistress or darkess and shadow powers.
After the battle of the border, we travel together to find the secrets of the Ixaldre's demons.
She has a permanent residence in the outside  woods of Adelia"
text = "Krystine Vanhail, mistress or darkess and shadow powers.
After the battle of the border, we travel together to find the secrets of the Ixaldre's demons.
She has a permanent residence in the outside  woods of Adelia"
custom_effects = [ SubResource( 4 ) ]

[node name="RichTextLabel2" type="RichTextLabel" parent="Pages/KrystinePage"]
margin_left = 396.0
margin_top = 44.0
margin_right = 718.0
margin_bottom = 91.0
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
text = "Her strategy on battle consist on transfer all demon tokens to the oponent.
"

[node name="TextureRect" type="TextureRect" parent="Pages/KrystinePage"]
modulate = Color( 0, 0, 0, 0.196078 )
margin_left = 102.0
margin_top = 62.0
margin_right = 252.0
margin_bottom = 251.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true

[node name="ReynerPage" type="Control" parent="Pages"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -751.0
margin_top = -229.0
margin_right = -9.0
margin_bottom = 228.0
mouse_filter = 2
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
page = 2
seal = "reyner_page_seal"

[node name="Title" type="RichTextLabel" parent="Pages/ReynerPage"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -361.0
margin_top = 8.0
margin_right = -34.0
margin_bottom = 28.0
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center][b]Black Scoprion[/b][/center]"
text = "Black Scoprion"
custom_effects = [ SubResource( 5 ) ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="Pages/ReynerPage"]
margin_left = 8.0
margin_top = 267.0
margin_right = 351.0
margin_bottom = 391.0
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "lorem ipsum dolor sit amet
"
text = "lorem ipsum dolor sit amet
"
custom_effects = [ SubResource( 5 ) ]

[node name="Fight" type="RichTextLabel" parent="Pages/ReynerPage"]
margin_left = 381.0
margin_top = 27.0
margin_right = 537.0
margin_bottom = 46.0
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fight2" type="RichTextLabel" parent="Pages/ReynerPage"]
margin_left = 383.0
margin_top = 237.0
margin_right = 539.0
margin_bottom = 254.0
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Pages/ReynerPage"]
modulate = Color( 0, 0, 0, 0.196078 )
margin_left = 99.0
margin_top = 57.0
margin_right = 249.0
margin_bottom = 246.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowersContainer" type="Control" parent="Pages/ReynerPage"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 380.0
margin_top = 50.0
margin_right = 500.0
margin_bottom = 84.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="Pages/ReynerPage/PowersContainer"]
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 3 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="Pages/ReynerPage/PowersContainer"]
anchor_left = 0.288931
anchor_right = 0.288931
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 3 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="Pages/ReynerPage/PowersContainer"]
anchor_left = 0.571044
anchor_right = 0.571044
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 3 )
expand = true

[node name="PowersContainer2" type="Control" parent="Pages/ReynerPage"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 382.0
margin_top = 87.0
margin_right = 502.0
margin_bottom = 121.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="Pages/ReynerPage/PowersContainer2"]
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 3 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="Pages/ReynerPage/PowersContainer2"]
anchor_left = 0.288931
anchor_right = 0.288931
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 4 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="Pages/ReynerPage/PowersContainer2"]
anchor_left = 0.571044
anchor_right = 0.571044
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 5 )
expand = true

[node name="PowersContainer3" type="Control" parent="Pages/ReynerPage"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 383.0
margin_top = 125.0
margin_right = 503.0
margin_bottom = 159.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="Pages/ReynerPage/PowersContainer3"]
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 3 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="Pages/ReynerPage/PowersContainer3"]
anchor_left = 0.288931
anchor_right = 0.288931
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 3 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="Pages/ReynerPage/PowersContainer3"]
anchor_left = 0.571044
anchor_right = 0.571044
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 3 )
expand = true

[node name="GenaPage" type="Control" parent="Pages"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -751.0
margin_top = -229.0
margin_right = -9.0
margin_bottom = 228.0
mouse_filter = 2
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
page = 3

[node name="Title" type="RichTextLabel" parent="Pages/GenaPage"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -361.0
margin_top = 8.0
margin_right = -34.0
margin_bottom = 28.0
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center][b]Black Scoprion[/b][/center]"
text = "Black Scoprion"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Pages/GenaPage"]
margin_left = 8.0
margin_top = 267.0
margin_right = 351.0
margin_bottom = 391.0
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )

[node name="Fight" type="RichTextLabel" parent="Pages/GenaPage"]
margin_left = 381.0
margin_top = 27.0
margin_right = 537.0
margin_bottom = 46.0
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fight2" type="RichTextLabel" parent="Pages/GenaPage"]
margin_left = 383.0
margin_top = 237.0
margin_right = 539.0
margin_bottom = 254.0
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Pages/GenaPage"]
modulate = Color( 0, 0, 0, 0.196078 )
margin_left = 99.0
margin_top = 57.0
margin_right = 249.0
margin_bottom = 246.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowersContainer" type="Container" parent="Pages/GenaPage"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 380.0
margin_top = 50.0
margin_right = 500.0
margin_bottom = 84.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Pages/GenaPage/PowersContainer"]
margin_right = 30.0
margin_bottom = 30.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="Pages/GenaPage/PowersContainer"]
anchor_left = 0.288931
anchor_right = 0.288931
margin_right = 30.0
margin_bottom = 30.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="Pages/GenaPage/PowersContainer"]
anchor_left = 0.571044
anchor_right = 0.571044
margin_right = 30.0
margin_bottom = 30.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true

[node name="PowersContainer2" type="Container" parent="Pages/GenaPage"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 382.0
margin_top = 87.0
margin_right = 502.0
margin_bottom = 121.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Pages/GenaPage/PowersContainer2"]
margin_right = 30.0
margin_bottom = 30.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="Pages/GenaPage/PowersContainer2"]
anchor_left = 0.288931
anchor_right = 0.288931
margin_right = 30.0
margin_bottom = 30.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="Pages/GenaPage/PowersContainer2"]
anchor_left = 0.571044
anchor_right = 0.571044
margin_right = 30.0
margin_bottom = 30.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true

[node name="PowersContainer3" type="Container" parent="Pages/GenaPage"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 383.0
margin_top = 125.0
margin_right = 503.0
margin_bottom = 159.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Pages/GenaPage/PowersContainer3"]
margin_right = 30.0
margin_bottom = 30.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="Pages/GenaPage/PowersContainer3"]
anchor_left = 0.288931
anchor_right = 0.288931
margin_right = 30.0
margin_bottom = 30.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="Pages/GenaPage/PowersContainer3"]
anchor_left = 0.571044
anchor_right = 0.571044
margin_right = 30.0
margin_bottom = 30.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SpellSealUI" parent="CanvasLayer" instance=ExtResource( 7 )]
visible = false

[node name="Bookmarks" type="Control" parent="."]
margin_left = 894.0
margin_top = 81.0
margin_right = 970.0
margin_bottom = 188.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Index" type="LinkButton" parent="Bookmarks"]
margin_left = 7.0
margin_top = 17.0
margin_right = 47.0
margin_bottom = 31.0
text = "Index"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cofrady" type="LinkButton" parent="Bookmarks"]
margin_left = 7.0
margin_top = 39.0
margin_right = 47.0
margin_bottom = 53.0
text = "Cofrady"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sorcery" type="LinkButton" parent="Bookmarks"]
margin_left = 7.0
margin_top = 61.0
margin_right = 47.0
margin_bottom = 75.0
text = "Sorcery"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="LinkButton" parent="."]
margin_left = 821.0
margin_top = 518.0
margin_right = 885.0
margin_bottom = 532.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Next Page"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prev" type="LinkButton" parent="."]
margin_left = 139.0
margin_top = 518.0
margin_right = 179.0
margin_bottom = 532.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Previous Page"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Pages/Index/LinkButton2" to="." method="change_page" binds= [ "KrystinePage" ]]
[connection signal="button_down" from="Bookmarks/Index" to="." method="change_page" binds= [ "Index" ]]
[connection signal="button_down" from="Bookmarks/Cofrady" to="." method="change_page" binds= [ "CofradyPage" ]]
[connection signal="button_down" from="Bookmarks/Sorcery" to="." method="change_page" binds= [ "SorceryPage" ]]
